/* * ==========================================================
 * PROJECT: RECETEA
 * DESCRIPTION: Physical schema creation script (DDL)
 * COMPATIBILITY: PostgreSQL
 * INTEGRATION: Java 24 (BigDecimal used for quantity)
 * ==========================================================
 */

-- ----------------------------------------------------------
-- 1. MASTER ENTITIES (LOOKUP TABLES)
-- ----------------------------------------------------------

-- User access credentials and profile data
CREATE TABLE "users" (
    "user_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "username" varchar(50) UNIQUE NOT NULL,
    "email" varchar(255) UNIQUE NOT NULL,
    "password_hash" varchar(255) NOT NULL,
    "created_at" timestamp DEFAULT (now())
);

-- General recipe classification
CREATE TABLE "categories" (
    "category_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "name" varchar(100) UNIQUE NOT NULL
);

-- Complexity levels
CREATE TABLE "difficulties" (
    "difficulty_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "difficulty_level" varchar(50) UNIQUE NOT NULL
);

-- Ingredient supply classification
CREATE TABLE "ingredient_categories" (
    "ingredient_category_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "name" varchar(100) UNIQUE NOT NULL
);

-- Units of measure for ingredient dosing
CREATE TABLE "unit_measures" (
    "unit_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "name" varchar(50) UNIQUE NOT NULL,
    "abbreviation" varchar(10) UNIQUE NOT NULL
);

-- ----------------------------------------------------------
-- 2. CORE ENTITIES (THE DOMAIN)
-- ----------------------------------------------------------

-- Recipe header and preparation metadata
CREATE TABLE "recipes" (
    "recipe_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "user_id" integer NOT NULL,
    "category_id" integer NOT NULL,
    "difficulty_id" integer NOT NULL,
    "title" varchar(200) NOT NULL,
    "description" text,
    "prep_time_min" integer CHECK (prep_time_min > 0),
    "servings" integer CHECK (servings > 0),
    "average_score" DECIMAL(3,2) DEFAULT 0.00,                        -- Denormalized: avoids AVG() on read (Dashboard/Search)
    "total_ratings" INTEGER DEFAULT 0 CHECK ("total_ratings" >= 0),   -- Denormalized: avoids COUNT() on read (Dashboard/Search)
    "created_at" timestamp DEFAULT (now())
);

-- Sequential instruction flow
CREATE TABLE "steps" (
    "step_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "recipe_id" integer NOT NULL,
    "step_order" integer NOT NULL CHECK (step_order > 0),
    "instruction" text NOT NULL
);

-- Multimedia resource management (provider-agnostic: LOCAL / S3 / etc.)
CREATE TABLE "recipe_media" (
    "media_id"         INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "recipe_id"        integer       NOT NULL,
    "storage_key"      varchar(2048) NOT NULL,
    "storage_provider" varchar(50)   NOT NULL,
    "mime_type"        varchar(100)  NOT NULL,
    "size_bytes"       bigint        NOT NULL CHECK (size_bytes >= 0),
    "is_main"          boolean       DEFAULT false,
    "sort_order"       integer       DEFAULT 0
);

-- Global catalogue of available ingredients
CREATE TABLE "ingredients" (
    "ingredient_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "ingredient_category_id" integer NOT NULL,
    "name" varchar(100) UNIQUE NOT NULL
);

-- 3. RELATIONSHIPS AND SOCIAL FEEDBACK
-- ----------------------------------------------------------

-- Per-recipe ingredient detail (N:M relationship)
CREATE TABLE "recipe_ingredients" (
    "recipe_id" integer NOT NULL,
    "ingredient_id" integer NOT NULL,
    "unit_id" integer NOT NULL,
    "quantity" decimal(10,2) NOT NULL CHECK (quantity > 0),
    PRIMARY KEY ("recipe_id", "ingredient_id")
);

-- Social metadata / tag management
CREATE TABLE "tags" (
    "tag_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "name" varchar(50) UNIQUE NOT NULL
);

-- Tag-to-recipe association (N:M relationship)
CREATE TABLE "recipe_tags" (
    "recipe_id" integer NOT NULL,
    "tag_id" integer NOT NULL,
    PRIMARY KEY ("recipe_id", "tag_id")
);

-- User personal recipe collections
CREATE TABLE "favorites" (
    "user_id" integer NOT NULL,
    "recipe_id" integer NOT NULL,
    "created_at" timestamp DEFAULT (now()),
    PRIMARY KEY ("user_id", "recipe_id")
);

-- Community scores and comments
CREATE TABLE "ratings" (
    "rating_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "user_id" integer NOT NULL,
    "recipe_id" integer NOT NULL,
    "score" integer NOT NULL CHECK (score >= 1 AND score <= 5),
    "comment" text,
    "created_at" timestamp DEFAULT (now())
);

-- ----------------------------------------------------------
-- 4. INDEXES
-- ----------------------------------------------------------

-- Integrity: at most one main photo per recipe
CREATE UNIQUE INDEX idx_unique_main_photo ON "recipe_media" ("recipe_id") WHERE ("is_main" = TRUE);

-- Integrity: step order must be unique within a recipe
CREATE UNIQUE INDEX ON "steps" ("recipe_id", "step_order");

-- Integrity: one rating per (user, recipe) pair
CREATE UNIQUE INDEX ON "ratings" ("user_id", "recipe_id");

-- B-Tree indexes for common join and filter access patterns --------------------

-- recipes.user_id: supports findByAuthorId and the author EXISTS filter in searchSummaries
CREATE INDEX idx_recipes_user_id        ON "recipes" ("user_id");

-- recipes.category_id / difficulty_id: support the INNER JOINs in every summary query
CREATE INDEX idx_recipes_category_id    ON "recipes" ("category_id");
CREATE INDEX idx_recipes_difficulty_id  ON "recipes" ("difficulty_id");

-- recipe_media.recipe_id: supports the LEFT JOIN in summary queries and the diff scan in syncMedia;
-- the partial unique index above already covers the is_main=true join path
CREATE INDEX idx_recipe_media_recipe_id ON "recipe_media" ("recipe_id");

-- recipes.title: effective only for prefix searches (LIKE 'x%' / ILIKE 'x%').
-- For full substring search (LIKE '%x%') this index is bypassed by the planner.
-- Production upgrade path:
--   CREATE EXTENSION IF NOT EXISTS pg_trgm;
--   CREATE INDEX idx_recipes_title_trgm ON recipes USING gin (lower(title) gin_trgm_ops);
CREATE INDEX idx_recipes_title ON "recipes" (lower("title"));

-- ----------------------------------------------------------
-- 5. COLUMN COMMENTS (DB METADATA)
-- ----------------------------------------------------------

COMMENT ON COLUMN "users"."username" IS 'Community-facing display name';

COMMENT ON COLUMN "users"."password_hash" IS 'BCrypt password hash (security)';

COMMENT ON COLUMN "categories"."name" IS 'E.g.: Desserts, Salads, Pasta';

COMMENT ON COLUMN "difficulties"."difficulty_level" IS 'Easy, Medium, Hard';

COMMENT ON COLUMN "ingredient_categories"."name" IS 'Grouping: Dairy, Meat, Vegetables...';

COMMENT ON COLUMN "unit_measures"."name" IS 'Grams, Litres, Units';

COMMENT ON COLUMN "unit_measures"."abbreviation" IS 'g, l, ud';

COMMENT ON COLUMN "recipes"."user_id" IS 'Recipe author';

COMMENT ON COLUMN "recipes"."prep_time_min" IS 'Constraint: CHECK > 0';

COMMENT ON COLUMN "recipes"."servings" IS 'Used for quantity scaling in application code. Constraint: CHECK > 0';

COMMENT ON COLUMN "steps"."step_order" IS 'Sequential order. Constraint: CHECK > 0';

COMMENT ON COLUMN "recipe_media"."storage_key"      IS 'Internal file path or key (UUID filename or S3 key)';
COMMENT ON COLUMN "recipe_media"."storage_provider" IS 'Provider: LOCAL, S3, etc.';
COMMENT ON COLUMN "recipe_media"."mime_type"        IS 'MIME type: image/jpeg, image/png, etc.';
COMMENT ON COLUMN "recipe_media"."size_bytes"       IS 'File size in bytes. Constraint: CHECK >= 0';

COMMENT ON COLUMN "recipe_media"."is_main" IS 'Only one TRUE per recipe (enforced via Partial Index)';

COMMENT ON COLUMN "recipe_media"."sort_order" IS 'Controls photo gallery display order';

COMMENT ON COLUMN "recipe_ingredients"."quantity" IS 'Uses BigDecimal in Java for precision. Constraint: CHECK > 0';

COMMENT ON COLUMN "tags"."name" IS '#Vegan, #Quick';

COMMENT ON COLUMN "ratings"."score" IS 'Score 1-5. Constraint: CHECK (score >= 1 AND score <= 5)';

COMMENT ON COLUMN "ratings"."comment" IS 'Optional user review text';

-- ----------------------------------------------------------
-- 6. REFERENTIAL INTEGRITY (FOREIGN KEYS)
-- ----------------------------------------------------------

-- Technical note: DEFERRABLE allows deferred constraint validation within complex transactions.

ALTER TABLE "recipes" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("user_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recipes" ADD FOREIGN KEY ("category_id") REFERENCES "categories" ("category_id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recipes" ADD FOREIGN KEY ("difficulty_id") REFERENCES "difficulties" ("difficulty_id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "ingredients" ADD FOREIGN KEY ("ingredient_category_id") REFERENCES "ingredient_categories" ("ingredient_category_id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "steps" ADD FOREIGN KEY ("recipe_id") REFERENCES "recipes" ("recipe_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recipe_media" ADD FOREIGN KEY ("recipe_id") REFERENCES "recipes" ("recipe_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "ratings" ADD FOREIGN KEY ("recipe_id") REFERENCES "recipes" ("recipe_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recipe_ingredients" ADD FOREIGN KEY ("recipe_id") REFERENCES "recipes" ("recipe_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recipe_tags" ADD FOREIGN KEY ("recipe_id") REFERENCES "recipes" ("recipe_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "favorites" ADD FOREIGN KEY ("recipe_id") REFERENCES "recipes" ("recipe_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "ratings" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("user_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "favorites" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("user_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recipe_ingredients" ADD FOREIGN KEY ("ingredient_id") REFERENCES "ingredients" ("ingredient_id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recipe_ingredients" ADD FOREIGN KEY ("unit_id") REFERENCES "unit_measures" ("unit_id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recipe_tags" ADD FOREIGN KEY ("tag_id") REFERENCES "tags" ("tag_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

-- ----------------------------------------------------------
-- 7. TRIGGERS AND BUSINESS FUNCTIONS
-- ----------------------------------------------------------

-- Validates that the user submitting a rating is not the recipe author
CREATE OR REPLACE FUNCTION fn_prevent_self_rating()
    RETURNS TRIGGER AS $$
BEGIN
    -- Identity check: voter must differ from author
    IF EXISTS (
        SELECT 1 FROM "recipes"
        WHERE "recipe_id" = NEW."recipe_id" AND "user_id" = NEW."user_id"
    ) THEN
        RAISE EXCEPTION 'Business Integrity Violation: An author cannot rate their own recipe.';
    END IF;
    RETURN NEW;
END;
$$ LANGUAGE plpgsql;

-- Trigger on ratings insert
CREATE TRIGGER trg_check_self_rating
    BEFORE INSERT ON "ratings"
    FOR EACH ROW
EXECUTE FUNCTION fn_prevent_self_rating();

COMMENT ON TRIGGER trg_check_self_rating ON "ratings" IS 'Ensures impartiality by preventing recipe authors from rating their own recipes.';
